[project]
name = "tilelayer_finder"
version = "0.1.0"
description = ""
authors = [
  { name = "Rosie Wood", email="rwood@turing.ac.uk" },
]
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
  "owslib>=0.29.2",
  "pandas<=1.5.3",
  "requests<=2.31.0",
  "pyproj<=3.6.1",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project.scripts]
tlf_run = "tilelayer_finder.run:main"

[tool.ruff]
select = [
  "E", "F", "W", # flake8
  "B",           # flake8-bugbear
  "I",           # isort
  "ARG",         # flake8-unused-arguments
  "C4",          # flake8-comprehensions
  "EM",          # flake8-errmsg
  "ICN",         # flake8-import-conventions
  "ISC",         # flake8-implicit-str-concat
  "G",           # flake8-logging-format
  "PGH",         # pygrep-hooks
  "PIE",         # flake8-pie
  "PL",          # pylint
  "PT",          # flake8-pytest-style
  "RET",         # flake8-return
  "RUF",         # Ruff-specific
  "SIM",         # flake8-simplify
  "UP",          # pyupgrade
  "YTT",         # flake8-2020
  "EXE",         # flake8-executable
  "N",           # pep8 naming
]
ignore = [
  "E501",   # Line too long
]
unfixable = [
  "F841", # Would remove unused variables
]

flake8-unused-arguments.ignore-variadic-names = true

# Assume Python 3.11
target-version = "py311"
